<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutProfessorHorista"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHoraAula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="340dp"
            android:text="@string/valorHoraAula"
            app:layout_constraintBottom_toTopOf="@+id/etValorHoraAula"
            app:layout_constraintStart_toStartOf="@+id/etValorHoraAula"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etValorHoraAula"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="45dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/tvQtdHoras"
            app:layout_constraintEnd_toEndOf="@+id/etQtdHoras"
            app:layout_constraintStart_toStartOf="@+id/tvQtdHoras"
            app:layout_constraintTop_toBottomOf="@+id/tvHoraAula"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/etQtdHoras"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginBottom="212dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvQtdHoras"
            app:layout_constraintTop_toBottomOf="@+id/tvQtdHoras"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvQtdHoras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/qtdHoras"
            app:layout_constraintBottom_toTopOf="@+id/etQtdHoras"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etValorHoraAula" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutProfessorTitular"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTempoInstituicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="340dp"
            android:text="@string/tempoNaInstituicao"
            app:layout_constraintBottom_toTopOf="@+id/etTempoInstituicao"
            app:layout_constraintStart_toStartOf="@+id/etTempoInstituicao"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etTempoInstituicao"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/tvSalario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTempoInstituicao"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/etSalario"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="213dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSalario"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvSalario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salario"
            app:layout_constraintBottom_toTopOf="@+id/etSalario"
            app:layout_constraintStart_toStartOf="@+id/etSalario"
            app:layout_constraintTop_toBottomOf="@+id/etTempoInstituicao" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="16dp"
        android:text="@string/autor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="81dp"
        android:text="@string/ra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spTipoProfessor"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTipoProfessor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipoProfessor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/spTipoProfessor"
        app:layout_constraintStart_toStartOf="@+id/spTipoProfessor" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/calcular"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>